Brief timeout to explain the redirect

--- a/slack.html
+++ b/slack.html
@@ -2,9 +2,13 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="1;url=https://join.slack.com/t/dc204/shared_invite/enQtMjY2NDMwNTE4MDMzLWRhMjM1ZjdmYTk4MzA0ZGZjOWQ3ZDEyYjYxYzc0YmZlNzgxMTQ2NzNmODdlNTVkNmRhOGExM2I5YzVmMWQwMTc">
+    <meta http-equiv="refresh" content="2;url=https://join.slack.com/t/dc204/shared_invite/enQtMjY2NDMwNTE4MDMzLWRhMjM1ZjdmYTk4MzA0ZGZjOWQ3ZDEyYjYxYzc0YmZlNzgxMTQ2NzNmODdlNTVkNmRhOGExM2I5YzVmMWQwMTc">
     <script language="javascript">
-        window.location.href = "https://join.slack.com/t/dc204/shared_invite/enQtMjY2NDMwNTE4MDMzLWRhMjM1ZjdmYTk4MzA0ZGZjOWQ3ZDEyYjYxYzc0YmZlNzgxMTQ2NzNmODdlNTVkNmRhOGExM2I5YzVmMWQwMTc"
+        window.setTimeout(function (){
+            window.location.href = "https://join.slack.com/t/dc204/shared_invite/enQtMjY2NDMwNTE4MDMzLWRhMjM1ZjdmYTk4MzA0ZGZjOWQ3ZDEyYjYxYzc0YmZlNzgxMTQ2NzNmODdlNTVkNmRhOGExM2I5YzVmMWQwMTc"
+          },
+          2000
+        );
     </script>
     <title>Redirecting to the BSidesWpg Slack</title>
 </head>
