--- a/redirect.html
+++ b/redirect.html
@@ -1,7 +1,7 @@
 <h1>We've moved!</h1>
-<p>BSides Winnipeg has renamed to The Long Con! Redirecting you to <b>thelongcon.ca</b> now...</p>
+<p>BSides Winnipeg has renamed to The Long Con! Redirecting you to <b><a href="http://thelongcon.ca">thelongco.ca</a></b> now...</p>
 <script>
 window.setTimeout(function () {
     window.location = 'http://thelongcon.ca';
-}, 2000);
+}, 5000);
 </script>
