Fix another typo.

--- a/redirect.html
+++ b/redirect.html
@@ -1,5 +1,5 @@
 <h1>We've moved!</h1>
-<p>BSides Winnipeg has renamed to The Long Con! Redirecting you to <b><a href="http://thelongcon.ca">thelongcom.ca</a></b> now...</p>
+<p>BSides Winnipeg has renamed to The Long Con! Redirecting you to <b><a href="http://thelongcon.ca">thelongcon.ca</a></b> now...</p>
 <script>
 window.setTimeout(function () {
     window.location = 'http://thelongcon.ca';
